reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,applet de commande
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93203229"
---
# <span data-ttu-id="c3c18-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="c3c18-103">Import-Csv</span></span>

## <span data-ttu-id="c3c18-104">SYNOPSIS</span><span class="sxs-lookup"><span data-stu-id="c3c18-104">SYNOPSIS</span></span>
<span data-ttu-id="c3c18-105">Crée des objets personnalisés de type tableau à partir des éléments dans un fichier de valeurs séparées par des virgules (CSV).</span><span class="sxs-lookup"><span data-stu-id="c3c18-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="c3c18-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="c3c18-106">SYNTAX</span></span>

### <span data-ttu-id="c3c18-107">Délimiteur (par défaut)</span><span class="sxs-lookup"><span data-stu-id="c3c18-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="c3c18-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="c3c18-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="c3c18-109">Description</span><span class="sxs-lookup"><span data-stu-id="c3c18-109">DESCRIPTION</span></span>

<span data-ttu-id="c3c18-110">L' `Import-Csv` applet de commande crée des objets personnalisés de type table à partir des éléments des fichiers CSV.</span><span class="sxs-lookup"><span data-stu-id="c3c18-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="c3c18-111">Chaque colonne du fichier CSV devient une propriété de l’objet personnalisé et les éléments des lignes deviennent les valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="c3c18-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="c3c18-112">`Import-Csv` fonctionne sur n’importe quel fichier CSV, y compris les fichiers générés par l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="c3c18-113">Vous pouvez utiliser les paramètres de l' `Import-Csv` applet de commande pour spécifier la ligne d’en-tête de colonne et le séparateur d’éléments, ou directement `Import-Csv` pour utiliser le séparateur de liste pour la culture actuelle comme délimiteur d’élément.</span><span class="sxs-lookup"><span data-stu-id="c3c18-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="c3c18-114">Vous pouvez également utiliser les `ConvertTo-Csv` applets de commande et `ConvertFrom-Csv` pour convertir des objets en chaînes CSV (et inversement).</span><span class="sxs-lookup"><span data-stu-id="c3c18-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="c3c18-115">Ces applets de commande sont les mêmes que les `Export-CSV` applets de commande et `Import-Csv` , à ceci près qu’elles ne traitent pas les fichiers.</span><span class="sxs-lookup"><span data-stu-id="c3c18-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="c3c18-116">Si une entrée de ligne d’en-tête dans un fichier CSV contient une valeur vide ou null, PowerShell insère un nom de ligne d’en-tête par défaut et affiche un message d’avertissement.</span><span class="sxs-lookup"><span data-stu-id="c3c18-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="c3c18-117">`Import-Csv` utilise la marque d’ordre d’octet (BOM) pour détecter le format d’encodage du fichier.</span><span class="sxs-lookup"><span data-stu-id="c3c18-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="c3c18-118">Si le fichier n’a pas de nomenclature, il suppose que l’encodage est UTF8.</span><span class="sxs-lookup"><span data-stu-id="c3c18-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="c3c18-119">EXEMPLES</span><span class="sxs-lookup"><span data-stu-id="c3c18-119">EXAMPLES</span></span>

### <span data-ttu-id="c3c18-120">Exemple 1 : importer des objets de processus</span><span class="sxs-lookup"><span data-stu-id="c3c18-120">Example 1: Import process objects</span></span>

<span data-ttu-id="c3c18-121">Cet exemple montre comment exporter, puis importer un fichier CSV d’objets de processus.</span><span class="sxs-lookup"><span data-stu-id="c3c18-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="c3c18-122">L' `Get-Process` applet de commande envoie les objets de processus vers le dessous du pipeline `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="c3c18-123">L' `Export-Csv` applet de commande convertit les objets processus en chaînes CSV et enregistre les chaînes dans le fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="c3c18-124">L' `Import-Csv` applet de commande importe les chaînes CSV à partir du fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="c3c18-125">Les chaînes sont enregistrées dans la `$P` variable.</span><span class="sxs-lookup"><span data-stu-id="c3c18-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="c3c18-126">La `$P` variable est envoyée dans le pipeline à l’applet de commande `Get-Member` qui affiche les propriétés des chaînes CSV importées.</span><span class="sxs-lookup"><span data-stu-id="c3c18-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="c3c18-127">La `$P` variable est envoyée dans le pipeline à l’applet de commande `Format-Table` et affiche les objets.</span><span class="sxs-lookup"><span data-stu-id="c3c18-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="c3c18-128">Exemple 2 : spécifier le délimiteur</span><span class="sxs-lookup"><span data-stu-id="c3c18-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="c3c18-129">Cet exemple montre comment utiliser le paramètre **Delimiter** de l’applet de commande `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="c3c18-130">L' `Get-Process` applet de commande envoie les objets de processus vers le dessous du pipeline `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="c3c18-131">L' `Export-Csv` applet de commande convertit les objets processus en chaînes CSV et enregistre les chaînes dans le fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="c3c18-132">Le paramètre **Delimiter** est utilisé pour spécifier un séparateur deux-points.</span><span class="sxs-lookup"><span data-stu-id="c3c18-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="c3c18-133">L' `Import-Csv` applet de commande importe les chaînes CSV à partir du fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="c3c18-134">Les chaînes sont enregistrées dans la `$P` variable.</span><span class="sxs-lookup"><span data-stu-id="c3c18-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="c3c18-135">`$P`La variable est envoyée à l’applet de commande via le pipeline `Format-Table` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="c3c18-136">Exemple 3 : spécifier la culture actuelle pour le délimiteur</span><span class="sxs-lookup"><span data-stu-id="c3c18-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="c3c18-137">Cet exemple montre comment utiliser l' `Import-Csv` applet de commande avec le paramètre **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="c3c18-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="c3c18-138">L' `Get-Culture` applet de commande utilise les propriétés imbriquées **TextInfo** et **ListSeparator** pour récupérer le séparateur de liste par défaut de la culture actuelle.</span><span class="sxs-lookup"><span data-stu-id="c3c18-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="c3c18-139">L' `Get-Process` applet de commande envoie les objets de processus vers le dessous du pipeline `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="c3c18-140">L' `Export-Csv` applet de commande convertit les objets processus en chaînes CSV et enregistre les chaînes dans le fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="c3c18-141">Le paramètre **UseCulture** utilise le séparateur de liste par défaut de la culture actuelle.</span><span class="sxs-lookup"><span data-stu-id="c3c18-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="c3c18-142">L' `Import-Csv` applet de commande importe les chaînes CSV à partir du fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="c3c18-143">Exemple 4 : modifier les noms de propriété dans un objet importé</span><span class="sxs-lookup"><span data-stu-id="c3c18-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="c3c18-144">Cet exemple montre comment utiliser le paramètre **header** de `Import-Csv` pour modifier les noms des propriétés dans l’objet importé résultant.</span><span class="sxs-lookup"><span data-stu-id="c3c18-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="c3c18-145">L' `Start-Job` applet de commande démarre une tâche en arrière-plan qui s’exécute `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="c3c18-146">Un objet de traitement est envoyé par le pipeline à l’applet de commande `Export-Csv` et converti en une chaîne CSV.</span><span class="sxs-lookup"><span data-stu-id="c3c18-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="c3c18-147">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations de type de la sortie CSV et est facultatif dans PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="c3c18-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="c3c18-148">La `$Header` variable contient un en-tête personnalisé qui remplace les valeurs par défaut suivantes : **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** et **PSJobTypeName** .</span><span class="sxs-lookup"><span data-stu-id="c3c18-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="c3c18-149">La `$A` variable utilise l' `Get-Content` applet de commande pour récupérer la chaîne CSV à partir du fichier Jobs.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="c3c18-150">La `$A` variable est utilisée pour supprimer l’en-tête par défaut du fichier.</span><span class="sxs-lookup"><span data-stu-id="c3c18-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="c3c18-151">L' `Out-File` applet de commande enregistre la nouvelle version du fichier de Jobs.csv dans la `$A` variable.</span><span class="sxs-lookup"><span data-stu-id="c3c18-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="c3c18-152">L' `Import-Csv` applet de commande importe le fichier Jobs.csv et utilise le paramètre d' **en-tête** pour appliquer la `$Header` variable.</span><span class="sxs-lookup"><span data-stu-id="c3c18-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="c3c18-153">La `$J` variable contient le **PSCustomObject** importé et affiche l’objet dans la console PowerShell.</span><span class="sxs-lookup"><span data-stu-id="c3c18-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="c3c18-154">Exemple 5 : créer un objet personnalisé à l’aide d’un fichier CSV</span><span class="sxs-lookup"><span data-stu-id="c3c18-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="c3c18-155">Cet exemple montre comment créer un objet personnalisé dans PowerShell à l’aide d’un fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="c3c18-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="c3c18-156">Pour créer votre fichier Links.csv, utilisez les valeurs indiquées dans la `Get-Content` sortie.</span><span class="sxs-lookup"><span data-stu-id="c3c18-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="c3c18-157">L' `Get-Content` applet de commande affiche le fichier Links.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="c3c18-158">L' `Import-Csv` applet de commande importe le fichier Links.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="c3c18-159">Le paramètre **header** spécifie les noms de propriété **LinkId** et **TopicTitle** .</span><span class="sxs-lookup"><span data-stu-id="c3c18-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="c3c18-160">Les objets sont stockés dans la `$A` variable.</span><span class="sxs-lookup"><span data-stu-id="c3c18-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="c3c18-161">L' `Get-Member` applet de commande affiche les noms des propriétés à partir du paramètre d' **en-tête** .</span><span class="sxs-lookup"><span data-stu-id="c3c18-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="c3c18-162">L' `Where-Object` applet de commande sélectionne des objets avec la propriété **TopicTitle** qui comprend un **alias** .</span><span class="sxs-lookup"><span data-stu-id="c3c18-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="c3c18-163">Exemple 6 : importer un fichier CSV auquel il manque une valeur</span><span class="sxs-lookup"><span data-stu-id="c3c18-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="c3c18-164">Cet exemple montre comment l' `Import-Csv` applet de commande dans PowerShell répond lorsque la ligne d’en-tête d’un fichier CSV contient une valeur null ou vide.</span><span class="sxs-lookup"><span data-stu-id="c3c18-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="c3c18-165">`Import-Csv` remplace le nom par défaut de la ligne d’en-tête manquante qui devient le nom de la propriété de l’objet `Import-Csv` retourné par.</span><span class="sxs-lookup"><span data-stu-id="c3c18-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="c3c18-166">Pour créer votre fichier Projects.csv, utilisez les valeurs indiquées dans la sortie de l’exemple `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="c3c18-167">L' `Get-Content` applet de commande affiche le fichier Projects.csv.</span><span class="sxs-lookup"><span data-stu-id="c3c18-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="c3c18-168">La ligne d’en-tête ne contient pas de valeur comprise entre **ProjectName** et **Completed** .</span><span class="sxs-lookup"><span data-stu-id="c3c18-168">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="c3c18-169">L' `Import-Csv` applet de commande importe le fichier Projects.csv et affiche un message d’avertissement, car **H1** est un nom d’en-tête par défaut.</span><span class="sxs-lookup"><span data-stu-id="c3c18-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="c3c18-170">La `(Import-Csv -Path
.\Projects.csv).H1` commande obtient les valeurs de propriété **H1** et affiche un avertissement.</span><span class="sxs-lookup"><span data-stu-id="c3c18-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="c3c18-171">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="c3c18-171">PARAMETERS</span></span>

### <span data-ttu-id="c3c18-172">-Délimiteur</span><span class="sxs-lookup"><span data-stu-id="c3c18-172">-Delimiter</span></span>

<span data-ttu-id="c3c18-173">Spécifie le délimiteur qui sépare les valeurs de propriété dans le fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="c3c18-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="c3c18-174">La valeur par défaut est une virgule (,).</span><span class="sxs-lookup"><span data-stu-id="c3c18-174">The default is a comma (,).</span></span>

<span data-ttu-id="c3c18-175">Entrez un caractère, tel qu'un signe deux-points (:).</span><span class="sxs-lookup"><span data-stu-id="c3c18-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="c3c18-176">Pour spécifier un point-virgule (;) Placez-le entre guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="c3c18-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="c3c18-177">Si vous spécifiez un caractère autre que le délimiteur de chaîne réel dans le fichier, `Import-Csv` ne peut pas créer les objets à partir des chaînes CSV et renverra les chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="c3c18-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="c3c18-178">-Encoding</span><span class="sxs-lookup"><span data-stu-id="c3c18-178">-Encoding</span></span>

<span data-ttu-id="c3c18-179">Spécifie le type de codage du fichier cible.</span><span class="sxs-lookup"><span data-stu-id="c3c18-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="c3c18-180">La valeur par défaut est `Default`.</span><span class="sxs-lookup"><span data-stu-id="c3c18-180">The default value is `Default`.</span></span>

<span data-ttu-id="c3c18-181">Les valeurs acceptables pour ce paramètre sont les suivantes :</span><span class="sxs-lookup"><span data-stu-id="c3c18-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="c3c18-182">`ASCII` Utilise le jeu de caractères ASCII (7 bits).</span><span class="sxs-lookup"><span data-stu-id="c3c18-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="c3c18-183">`BigEndianUnicode` Utilise UTF-16 avec l’ordre des octets de poids fort (Big-endian).</span><span class="sxs-lookup"><span data-stu-id="c3c18-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="c3c18-184">`Default` Utilise l’encodage qui correspond à la page de codes active du système (généralement ANSI).</span><span class="sxs-lookup"><span data-stu-id="c3c18-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="c3c18-185">`OEM` Utilise l’encodage qui correspond à la page de codes OEM actuelle du système.</span><span class="sxs-lookup"><span data-stu-id="c3c18-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="c3c18-186">`Unicode` Utilise UTF-16 avec l’ordre de primauté des octets de poids faible (Little-endian).</span><span class="sxs-lookup"><span data-stu-id="c3c18-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="c3c18-187">`UTF7` Utilise UTF-7.</span><span class="sxs-lookup"><span data-stu-id="c3c18-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="c3c18-188">`UTF8` Utilise UTF-8.</span><span class="sxs-lookup"><span data-stu-id="c3c18-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="c3c18-189">`UTF32` Utilise UTF-32 avec l’ordre de primauté des octets de poids faible (Little-endian).</span><span class="sxs-lookup"><span data-stu-id="c3c18-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="c3c18-190">-En-tête</span><span class="sxs-lookup"><span data-stu-id="c3c18-190">-Header</span></span>

<span data-ttu-id="c3c18-191">Spécifie une autre ligne d'en-tête de colonne pour la chaîne importée.</span><span class="sxs-lookup"><span data-stu-id="c3c18-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="c3c18-192">L’en-tête de colonne détermine les noms des propriétés des objets créés par `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="c3c18-193">Entrez les en-têtes de colonne sous la forme d’une liste séparée par des virgules.</span><span class="sxs-lookup"><span data-stu-id="c3c18-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="c3c18-194">Ne placez pas la chaîne d'en-tête entre guillemets.</span><span class="sxs-lookup"><span data-stu-id="c3c18-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="c3c18-195">Mettez chaque en-tête de colonne entre guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="c3c18-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="c3c18-196">Si vous entrez moins d’en-têtes de colonnes qu’il n’y a de colonnes de données, les colonnes de données restantes sont ignorées.</span><span class="sxs-lookup"><span data-stu-id="c3c18-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="c3c18-197">Si vous entrez davantage d’en-têtes de colonne qu’il n’y a de colonnes de données, les en-têtes de colonne supplémentaires sont créés avec des colonnes de données vides.</span><span class="sxs-lookup"><span data-stu-id="c3c18-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="c3c18-198">Quand vous utilisez le paramètre **header** , supprimez la ligne d’en-tête d’origine du fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="c3c18-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="c3c18-199">Sinon, `Import-Csv` crée un objet supplémentaire à partir des éléments de la ligne d’en-tête.</span><span class="sxs-lookup"><span data-stu-id="c3c18-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="c3c18-200">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="c3c18-200">-LiteralPath</span></span>

<span data-ttu-id="c3c18-201">Spécifie le chemin d'accès au fichier CSV à importer.</span><span class="sxs-lookup"><span data-stu-id="c3c18-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="c3c18-202">Contrairement au paramètre **Path** , la valeur du paramètre **LiteralPath** est utilisée exactement telle qu'elle est tapée.</span><span class="sxs-lookup"><span data-stu-id="c3c18-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="c3c18-203">Aucun caractère n’est interprété en tant que caractère générique.</span><span class="sxs-lookup"><span data-stu-id="c3c18-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="c3c18-204">Si le chemin d’accès inclut des caractères d’échappement, mettez-le entre des guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="c3c18-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="c3c18-205">Les guillemets simples indiquent à PowerShell qu’il n’est pas possible d’interpréter les caractères comme des séquences d’échappement.</span><span class="sxs-lookup"><span data-stu-id="c3c18-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="c3c18-206">-Path</span><span class="sxs-lookup"><span data-stu-id="c3c18-206">-Path</span></span>

<span data-ttu-id="c3c18-207">Spécifie le chemin d'accès au fichier CSV à importer.</span><span class="sxs-lookup"><span data-stu-id="c3c18-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="c3c18-208">Vous pouvez également diriger un chemin vers `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="c3c18-209">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="c3c18-209">-UseCulture</span></span>

<span data-ttu-id="c3c18-210">Utilise le séparateur de liste pour la culture actuelle comme délimiteur d’élément.</span><span class="sxs-lookup"><span data-stu-id="c3c18-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="c3c18-211">Pour rechercher le séparateur de liste pour une culture, utilisez la commande suivante : `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="c3c18-212">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="c3c18-212">CommonParameters</span></span>

<span data-ttu-id="c3c18-213">Cette applet de commande prend en charge les paramètres courants : -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction et -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="c3c18-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="c3c18-214">Pour plus d’informations, consultez [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="c3c18-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="c3c18-215">ENTRÉES</span><span class="sxs-lookup"><span data-stu-id="c3c18-215">INPUTS</span></span>

### <span data-ttu-id="c3c18-216">System.String</span><span class="sxs-lookup"><span data-stu-id="c3c18-216">System.String</span></span>

<span data-ttu-id="c3c18-217">Vous pouvez diriger une chaîne qui contient un chemin d’accès vers `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="c3c18-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="c3c18-218">SORTIES</span><span class="sxs-lookup"><span data-stu-id="c3c18-218">OUTPUTS</span></span>

### <span data-ttu-id="c3c18-219">Object</span><span class="sxs-lookup"><span data-stu-id="c3c18-219">Object</span></span>

<span data-ttu-id="c3c18-220">Cette applet de commande retourne les objets décrits par le contenu dans le fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="c3c18-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="c3c18-221">REMARQUES</span><span class="sxs-lookup"><span data-stu-id="c3c18-221">NOTES</span></span>

<span data-ttu-id="c3c18-222">Étant donné que les objets importés sont des versions CSV du type d’objet, ils ne sont pas reconnus ni mis en forme par les entrées de mise en forme de type PowerShell qui mettent en forme les versions non-CSV du type d’objet.</span><span class="sxs-lookup"><span data-stu-id="c3c18-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="c3c18-223">Le résultat d’une `Import-Csv` commande est une collection de chaînes qui forment un objet personnalisé de type table.</span><span class="sxs-lookup"><span data-stu-id="c3c18-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="c3c18-224">Chaque ligne étant une chaîne distincte, vous pouvez utiliser la propriété **Count** de l’objet pour compter les lignes de la table.</span><span class="sxs-lookup"><span data-stu-id="c3c18-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="c3c18-225">Les colonnes sont les propriétés de l'objet et les éléments des lignes sont les valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="c3c18-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="c3c18-226">La ligne d'en-tête de colonne détermine le nombre de colonnes et les noms de colonne.</span><span class="sxs-lookup"><span data-stu-id="c3c18-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="c3c18-227">Les noms de colonne sont également les noms des propriétés des objets.</span><span class="sxs-lookup"><span data-stu-id="c3c18-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="c3c18-228">La première ligne est interprétée comme étant les en-têtes de colonne, sauf si vous utilisez le paramètre **header** pour spécifier des en-têtes de colonne.</span><span class="sxs-lookup"><span data-stu-id="c3c18-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="c3c18-229">Si une ligne possède plus de valeurs que la ligne d'en-tête, les valeurs supplémentaires sont ignorées.</span><span class="sxs-lookup"><span data-stu-id="c3c18-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="c3c18-230">Si une valeur est manquante dans la ligne d’en-tête de colonne ou si elle contient une valeur null ou vide, `Import-Csv` utilise **H** suivi d’un nombre pour l’en-tête de colonne et le nom de propriété manquants.</span><span class="sxs-lookup"><span data-stu-id="c3c18-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="c3c18-231">Dans le fichier CSV, chaque objet est représenté par une liste séparée par des virgules des valeurs de propriété de l'objet.</span><span class="sxs-lookup"><span data-stu-id="c3c18-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="c3c18-232">Les valeurs de propriété sont converties en chaînes à l’aide de la méthode **ToString ()** de l’objet. elles sont donc représentées par le nom de la valeur de la propriété.</span><span class="sxs-lookup"><span data-stu-id="c3c18-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="c3c18-233">`Export-Csv` n’exporte pas les méthodes de l’objet.</span><span class="sxs-lookup"><span data-stu-id="c3c18-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="c3c18-234">LIENS CONNEXES</span><span class="sxs-lookup"><span data-stu-id="c3c18-234">RELATED LINKS</span></span>

[<span data-ttu-id="c3c18-235">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="c3c18-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="c3c18-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="c3c18-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="c3c18-237">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="c3c18-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="c3c18-238">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="c3c18-238">Get-Culture</span></span>](Get-Culture.md)
