reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,applet de commande
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/03/2020
ms.locfileid: "93201733"
---
# <span data-ttu-id="db9c5-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="db9c5-103">Import-Csv</span></span>

## <span data-ttu-id="db9c5-104">SYNOPSIS</span><span class="sxs-lookup"><span data-stu-id="db9c5-104">SYNOPSIS</span></span>
<span data-ttu-id="db9c5-105">Crée des objets personnalisés de type tableau à partir des éléments dans un fichier de valeurs séparées par des virgules (CSV).</span><span class="sxs-lookup"><span data-stu-id="db9c5-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="db9c5-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="db9c5-106">SYNTAX</span></span>

### <span data-ttu-id="db9c5-107">DelimiterPath (par défaut)</span><span class="sxs-lookup"><span data-stu-id="db9c5-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="db9c5-108">DelimiterLiteralPath</span><span class="sxs-lookup"><span data-stu-id="db9c5-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="db9c5-109">CulturePath</span><span class="sxs-lookup"><span data-stu-id="db9c5-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="db9c5-110">CultureLiteralPath</span><span class="sxs-lookup"><span data-stu-id="db9c5-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="db9c5-111">Description</span><span class="sxs-lookup"><span data-stu-id="db9c5-111">DESCRIPTION</span></span>

<span data-ttu-id="db9c5-112">L' `Import-Csv` applet de commande crée des objets personnalisés de type table à partir des éléments des fichiers CSV.</span><span class="sxs-lookup"><span data-stu-id="db9c5-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="db9c5-113">Chaque colonne du fichier CSV devient une propriété de l’objet personnalisé et les éléments des lignes deviennent les valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="db9c5-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="db9c5-114">`Import-Csv` fonctionne sur n’importe quel fichier CSV, y compris les fichiers générés par l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="db9c5-115">Vous pouvez utiliser les paramètres de l' `Import-Csv` applet de commande pour spécifier la ligne d’en-tête de colonne et le séparateur d’éléments, ou directement `Import-Csv` pour utiliser le séparateur de liste pour la culture actuelle comme délimiteur d’élément.</span><span class="sxs-lookup"><span data-stu-id="db9c5-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="db9c5-116">Vous pouvez également utiliser les `ConvertTo-Csv` applets de commande et `ConvertFrom-Csv` pour convertir des objets en chaînes CSV (et inversement).</span><span class="sxs-lookup"><span data-stu-id="db9c5-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="db9c5-117">Ces applets de commande sont les mêmes que les `Export-CSV` applets de commande et `Import-Csv` , à ceci près qu’elles ne traitent pas les fichiers.</span><span class="sxs-lookup"><span data-stu-id="db9c5-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="db9c5-118">Si une entrée de ligne d’en-tête dans un fichier CSV contient une valeur vide ou null, PowerShell insère un nom de ligne d’en-tête par défaut et affiche un message d’avertissement.</span><span class="sxs-lookup"><span data-stu-id="db9c5-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="db9c5-119">À compter de PowerShell 6,0, `Import-Csv` prend désormais en charge le format de fichier journal étendu W3C.</span><span class="sxs-lookup"><span data-stu-id="db9c5-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="db9c5-120">EXEMPLES</span><span class="sxs-lookup"><span data-stu-id="db9c5-120">EXAMPLES</span></span>

### <span data-ttu-id="db9c5-121">Exemple 1 : importer des objets de processus</span><span class="sxs-lookup"><span data-stu-id="db9c5-121">Example 1: Import process objects</span></span>

<span data-ttu-id="db9c5-122">Cet exemple montre comment exporter, puis importer un fichier CSV d’objets de processus.</span><span class="sxs-lookup"><span data-stu-id="db9c5-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="db9c5-123">L' `Get-Process` applet de commande envoie les objets de processus vers le dessous du pipeline `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="db9c5-124">L' `Export-Csv` applet de commande convertit les objets processus en chaînes CSV et enregistre les chaînes dans le fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="db9c5-125">L' `Import-Csv` applet de commande importe les chaînes CSV à partir du fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="db9c5-126">Les chaînes sont enregistrées dans la `$P` variable.</span><span class="sxs-lookup"><span data-stu-id="db9c5-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="db9c5-127">La `$P` variable est envoyée dans le pipeline à l’applet de commande `Get-Member` qui affiche les propriétés des chaînes CSV importées.</span><span class="sxs-lookup"><span data-stu-id="db9c5-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="db9c5-128">La `$P` variable est envoyée dans le pipeline à l’applet de commande `Format-Table` et affiche les objets.</span><span class="sxs-lookup"><span data-stu-id="db9c5-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="db9c5-129">Exemple 2 : spécifier le délimiteur</span><span class="sxs-lookup"><span data-stu-id="db9c5-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="db9c5-130">Cet exemple montre comment utiliser le paramètre **Delimiter** de l’applet de commande `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="db9c5-131">L' `Get-Process` applet de commande envoie les objets de processus vers le dessous du pipeline `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="db9c5-132">L' `Export-Csv` applet de commande convertit les objets processus en chaînes CSV et enregistre les chaînes dans le fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="db9c5-133">Le paramètre **Delimiter** est utilisé pour spécifier un séparateur deux-points.</span><span class="sxs-lookup"><span data-stu-id="db9c5-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="db9c5-134">L' `Import-Csv` applet de commande importe les chaînes CSV à partir du fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="db9c5-135">Les chaînes sont enregistrées dans la `$P` variable.</span><span class="sxs-lookup"><span data-stu-id="db9c5-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="db9c5-136">`$P`La variable est envoyée à l’applet de commande via le pipeline `Format-Table` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="db9c5-137">Exemple 3 : spécifier la culture actuelle pour le délimiteur</span><span class="sxs-lookup"><span data-stu-id="db9c5-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="db9c5-138">Cet exemple montre comment utiliser l' `Import-Csv` applet de commande avec le paramètre **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="db9c5-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="db9c5-139">L' `Get-Culture` applet de commande utilise les propriétés imbriquées **TextInfo** et **ListSeparator** pour récupérer le séparateur de liste par défaut de la culture actuelle.</span><span class="sxs-lookup"><span data-stu-id="db9c5-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="db9c5-140">L' `Get-Process` applet de commande envoie les objets de processus vers le dessous du pipeline `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="db9c5-141">L' `Export-Csv` applet de commande convertit les objets processus en chaînes CSV et enregistre les chaînes dans le fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="db9c5-142">Le paramètre **UseCulture** utilise le séparateur de liste par défaut de la culture actuelle.</span><span class="sxs-lookup"><span data-stu-id="db9c5-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="db9c5-143">L' `Import-Csv` applet de commande importe les chaînes CSV à partir du fichier Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="db9c5-144">Exemple 4 : modifier les noms de propriété dans un objet importé</span><span class="sxs-lookup"><span data-stu-id="db9c5-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="db9c5-145">Cet exemple montre comment utiliser le paramètre **header** de `Import-Csv` pour modifier les noms des propriétés dans l’objet importé résultant.</span><span class="sxs-lookup"><span data-stu-id="db9c5-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="db9c5-146">L' `Start-Job` applet de commande démarre une tâche en arrière-plan qui s’exécute `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="db9c5-147">Un objet de traitement est envoyé par le pipeline à l’applet de commande `Export-Csv` et converti en une chaîne CSV.</span><span class="sxs-lookup"><span data-stu-id="db9c5-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="db9c5-148">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations de type de la sortie CSV et est facultatif dans PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="db9c5-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="db9c5-149">La `$Header` variable contient un en-tête personnalisé qui remplace les valeurs par défaut suivantes : **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** et **PSJobTypeName** .</span><span class="sxs-lookup"><span data-stu-id="db9c5-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="db9c5-150">La `$A` variable utilise l' `Get-Content` applet de commande pour récupérer la chaîne CSV à partir du fichier Jobs.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="db9c5-151">La `$A` variable est utilisée pour supprimer l’en-tête par défaut du fichier.</span><span class="sxs-lookup"><span data-stu-id="db9c5-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="db9c5-152">L' `Out-File` applet de commande enregistre la nouvelle version du fichier de Jobs.csv dans la `$A` variable.</span><span class="sxs-lookup"><span data-stu-id="db9c5-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="db9c5-153">L' `Import-Csv` applet de commande importe le fichier Jobs.csv et utilise le paramètre d' **en-tête** pour appliquer la `$Header` variable.</span><span class="sxs-lookup"><span data-stu-id="db9c5-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="db9c5-154">La `$J` variable contient le **PSCustomObject** importé et affiche l’objet dans la console PowerShell.</span><span class="sxs-lookup"><span data-stu-id="db9c5-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="db9c5-155">Exemple 5 : créer un objet personnalisé à l’aide d’un fichier CSV</span><span class="sxs-lookup"><span data-stu-id="db9c5-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="db9c5-156">Cet exemple montre comment créer un objet personnalisé dans PowerShell à l’aide d’un fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="db9c5-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="db9c5-157">Pour créer votre fichier Links.csv, utilisez les valeurs indiquées dans la `Get-Content` sortie.</span><span class="sxs-lookup"><span data-stu-id="db9c5-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="db9c5-158">L' `Get-Content` applet de commande affiche le fichier Links.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="db9c5-159">L' `Import-Csv` applet de commande importe le fichier Links.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="db9c5-160">Le paramètre **header** spécifie les noms de propriété **LinkId** et **TopicTitle** .</span><span class="sxs-lookup"><span data-stu-id="db9c5-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="db9c5-161">Les objets sont stockés dans la `$A` variable.</span><span class="sxs-lookup"><span data-stu-id="db9c5-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="db9c5-162">L' `Get-Member` applet de commande affiche les noms des propriétés à partir du paramètre d' **en-tête** .</span><span class="sxs-lookup"><span data-stu-id="db9c5-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="db9c5-163">L' `Where-Object` applet de commande sélectionne des objets avec la propriété **TopicTitle** qui comprend un **alias** .</span><span class="sxs-lookup"><span data-stu-id="db9c5-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="db9c5-164">Exemple 6 : importer un fichier CSV auquel il manque une valeur</span><span class="sxs-lookup"><span data-stu-id="db9c5-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="db9c5-165">Cet exemple montre comment l' `Import-Csv` applet de commande dans PowerShell répond lorsque la ligne d’en-tête d’un fichier CSV contient une valeur null ou vide.</span><span class="sxs-lookup"><span data-stu-id="db9c5-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="db9c5-166">`Import-Csv` remplace le nom par défaut de la ligne d’en-tête manquante qui devient le nom de la propriété de l’objet `Import-Csv` retourné par.</span><span class="sxs-lookup"><span data-stu-id="db9c5-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="db9c5-167">Pour créer votre fichier Projects.csv, utilisez les valeurs indiquées dans la sortie de l’exemple `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="db9c5-168">L' `Get-Content` applet de commande affiche le fichier Projects.csv.</span><span class="sxs-lookup"><span data-stu-id="db9c5-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="db9c5-169">La ligne d’en-tête ne contient pas de valeur comprise entre **ProjectName** et **Completed** .</span><span class="sxs-lookup"><span data-stu-id="db9c5-169">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="db9c5-170">L' `Import-Csv` applet de commande importe le fichier Projects.csv et affiche un message d’avertissement, car **H1** est un nom d’en-tête par défaut.</span><span class="sxs-lookup"><span data-stu-id="db9c5-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="db9c5-171">La `(Import-Csv -Path
.\Projects.csv).H1` commande obtient les valeurs de propriété **H1** et affiche un avertissement.</span><span class="sxs-lookup"><span data-stu-id="db9c5-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="db9c5-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="db9c5-172">PARAMETERS</span></span>

### <span data-ttu-id="db9c5-173">-Délimiteur</span><span class="sxs-lookup"><span data-stu-id="db9c5-173">-Delimiter</span></span>

<span data-ttu-id="db9c5-174">Spécifie le délimiteur qui sépare les valeurs de propriété dans le fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="db9c5-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="db9c5-175">La valeur par défaut est une virgule (,).</span><span class="sxs-lookup"><span data-stu-id="db9c5-175">The default is a comma (,).</span></span>

<span data-ttu-id="db9c5-176">Entrez un caractère, tel qu'un signe deux-points (:).</span><span class="sxs-lookup"><span data-stu-id="db9c5-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="db9c5-177">Pour spécifier un point-virgule (;) Placez-le entre guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="db9c5-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="db9c5-178">Si vous spécifiez un caractère autre que le délimiteur de chaîne réel dans le fichier, `Import-Csv` ne peut pas créer les objets à partir des chaînes CSV et renverra les chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="db9c5-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="db9c5-179">-Encoding</span><span class="sxs-lookup"><span data-stu-id="db9c5-179">-Encoding</span></span>

<span data-ttu-id="db9c5-180">Spécifie l’encodage pour le fichier CSV importé.</span><span class="sxs-lookup"><span data-stu-id="db9c5-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="db9c5-181">La valeur par défaut est `utf8NoBOM`.</span><span class="sxs-lookup"><span data-stu-id="db9c5-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="db9c5-182">Les valeurs acceptables pour ce paramètre sont les suivantes :</span><span class="sxs-lookup"><span data-stu-id="db9c5-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="db9c5-183">`ascii`: Utilise l’encodage pour le jeu de caractères ASCII (7 bits).</span><span class="sxs-lookup"><span data-stu-id="db9c5-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="db9c5-184">`bigendianunicode`: Encode au format UTF-16 à l’aide de l’ordre des octets de poids fort (Big-endian).</span><span class="sxs-lookup"><span data-stu-id="db9c5-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="db9c5-185">`oem`: Utilise l’encodage par défaut pour les programmes MS-DOS et console.</span><span class="sxs-lookup"><span data-stu-id="db9c5-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="db9c5-186">`unicode`: Encode au format UTF-16 à l’aide de l’ordre de primauté des octets de poids faible (Little-endian).</span><span class="sxs-lookup"><span data-stu-id="db9c5-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="db9c5-187">`utf7`: Encode au format UTF-7.</span><span class="sxs-lookup"><span data-stu-id="db9c5-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="db9c5-188">`utf8`: Encode au format UTF-8.</span><span class="sxs-lookup"><span data-stu-id="db9c5-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="db9c5-189">`utf8BOM`: Encode au format UTF-8 avec marque d’ordre d’octet (BOM)</span><span class="sxs-lookup"><span data-stu-id="db9c5-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="db9c5-190">`utf8NoBOM`: Encode au format UTF-8 sans marque d’ordre d’octet (BOM)</span><span class="sxs-lookup"><span data-stu-id="db9c5-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="db9c5-191">`utf32`: Encode au format UTF-32.</span><span class="sxs-lookup"><span data-stu-id="db9c5-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="db9c5-192">À partir de PowerShell 6,2, le paramètre **Encoding** autorise également les ID numériques des pages de codes inscrites (comme `-Encoding 1251` ) ou les noms de chaîne des pages de codes inscrites (comme `-Encoding "windows-1251"` ).</span><span class="sxs-lookup"><span data-stu-id="db9c5-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="db9c5-193">Pour plus d’informations, consultez la documentation .NET pour [Encoding. CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span><span class="sxs-lookup"><span data-stu-id="db9c5-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="db9c5-194">-En-tête</span><span class="sxs-lookup"><span data-stu-id="db9c5-194">-Header</span></span>

<span data-ttu-id="db9c5-195">Spécifie une autre ligne d'en-tête de colonne pour la chaîne importée.</span><span class="sxs-lookup"><span data-stu-id="db9c5-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="db9c5-196">L’en-tête de colonne détermine les noms des propriétés des objets créés par `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="db9c5-197">Entrez les en-têtes de colonne sous la forme d’une liste séparée par des virgules.</span><span class="sxs-lookup"><span data-stu-id="db9c5-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="db9c5-198">Ne placez pas la chaîne d'en-tête entre guillemets.</span><span class="sxs-lookup"><span data-stu-id="db9c5-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="db9c5-199">Mettez chaque en-tête de colonne entre guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="db9c5-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="db9c5-200">Si vous entrez moins d’en-têtes de colonnes qu’il n’y a de colonnes de données, les colonnes de données restantes sont ignorées.</span><span class="sxs-lookup"><span data-stu-id="db9c5-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="db9c5-201">Si vous entrez davantage d’en-têtes de colonne qu’il n’y a de colonnes de données, les en-têtes de colonne supplémentaires sont créés avec des colonnes de données vides.</span><span class="sxs-lookup"><span data-stu-id="db9c5-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="db9c5-202">Quand vous utilisez le paramètre **header** , supprimez la ligne d’en-tête d’origine du fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="db9c5-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="db9c5-203">Sinon, `Import-Csv` crée un objet supplémentaire à partir des éléments de la ligne d’en-tête.</span><span class="sxs-lookup"><span data-stu-id="db9c5-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="db9c5-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="db9c5-204">-LiteralPath</span></span>

<span data-ttu-id="db9c5-205">Spécifie le chemin d'accès au fichier CSV à importer.</span><span class="sxs-lookup"><span data-stu-id="db9c5-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="db9c5-206">Contrairement au paramètre **Path** , la valeur du paramètre **LiteralPath** est utilisée exactement telle qu'elle est tapée.</span><span class="sxs-lookup"><span data-stu-id="db9c5-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="db9c5-207">Aucun caractère n’est interprété en tant que caractère générique.</span><span class="sxs-lookup"><span data-stu-id="db9c5-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="db9c5-208">Si le chemin d’accès inclut des caractères d’échappement, mettez-le entre des guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="db9c5-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="db9c5-209">Les guillemets simples indiquent à PowerShell qu’il n’est pas possible d’interpréter les caractères comme des séquences d’échappement.</span><span class="sxs-lookup"><span data-stu-id="db9c5-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="db9c5-210">-Path</span><span class="sxs-lookup"><span data-stu-id="db9c5-210">-Path</span></span>

<span data-ttu-id="db9c5-211">Spécifie le chemin d'accès au fichier CSV à importer.</span><span class="sxs-lookup"><span data-stu-id="db9c5-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="db9c5-212">Vous pouvez également diriger un chemin vers `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="db9c5-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="db9c5-213">-UseCulture</span></span>

<span data-ttu-id="db9c5-214">Utilise le séparateur de liste pour la culture actuelle comme délimiteur d’élément.</span><span class="sxs-lookup"><span data-stu-id="db9c5-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="db9c5-215">Pour rechercher le séparateur de liste pour une culture, utilisez la commande suivante : `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="db9c5-216">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="db9c5-216">CommonParameters</span></span>

<span data-ttu-id="db9c5-217">Cette applet de commande prend en charge les paramètres courants : -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction et -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="db9c5-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="db9c5-218">Pour plus d’informations, consultez [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="db9c5-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="db9c5-219">ENTRÉES</span><span class="sxs-lookup"><span data-stu-id="db9c5-219">INPUTS</span></span>

### <span data-ttu-id="db9c5-220">System.String</span><span class="sxs-lookup"><span data-stu-id="db9c5-220">System.String</span></span>

<span data-ttu-id="db9c5-221">Vous pouvez diriger une chaîne qui contient un chemin d’accès vers `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="db9c5-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="db9c5-222">SORTIES</span><span class="sxs-lookup"><span data-stu-id="db9c5-222">OUTPUTS</span></span>

### <span data-ttu-id="db9c5-223">Object</span><span class="sxs-lookup"><span data-stu-id="db9c5-223">Object</span></span>

<span data-ttu-id="db9c5-224">Cette applet de commande retourne les objets décrits par le contenu dans le fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="db9c5-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="db9c5-225">REMARQUES</span><span class="sxs-lookup"><span data-stu-id="db9c5-225">NOTES</span></span>

<span data-ttu-id="db9c5-226">Étant donné que les objets importés sont des versions CSV du type d’objet, ils ne sont pas reconnus ni mis en forme par les entrées de mise en forme de type PowerShell qui mettent en forme les versions non-CSV du type d’objet.</span><span class="sxs-lookup"><span data-stu-id="db9c5-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="db9c5-227">Le résultat d’une `Import-Csv` commande est une collection de chaînes qui forment un objet personnalisé de type table.</span><span class="sxs-lookup"><span data-stu-id="db9c5-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="db9c5-228">Chaque ligne étant une chaîne distincte, vous pouvez utiliser la propriété **Count** de l’objet pour compter les lignes de la table.</span><span class="sxs-lookup"><span data-stu-id="db9c5-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="db9c5-229">Les colonnes sont les propriétés de l'objet et les éléments des lignes sont les valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="db9c5-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="db9c5-230">La ligne d'en-tête de colonne détermine le nombre de colonnes et les noms de colonne.</span><span class="sxs-lookup"><span data-stu-id="db9c5-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="db9c5-231">Les noms de colonne sont également les noms des propriétés des objets.</span><span class="sxs-lookup"><span data-stu-id="db9c5-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="db9c5-232">La première ligne est interprétée comme étant les en-têtes de colonne, sauf si vous utilisez le paramètre **header** pour spécifier des en-têtes de colonne.</span><span class="sxs-lookup"><span data-stu-id="db9c5-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="db9c5-233">Si une ligne possède plus de valeurs que la ligne d'en-tête, les valeurs supplémentaires sont ignorées.</span><span class="sxs-lookup"><span data-stu-id="db9c5-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="db9c5-234">Si une valeur est manquante dans la ligne d’en-tête de colonne ou si elle contient une valeur null ou vide, `Import-Csv` utilise **H** suivi d’un nombre pour l’en-tête de colonne et le nom de propriété manquants.</span><span class="sxs-lookup"><span data-stu-id="db9c5-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="db9c5-235">Dans le fichier CSV, chaque objet est représenté par une liste séparée par des virgules des valeurs de propriété de l'objet.</span><span class="sxs-lookup"><span data-stu-id="db9c5-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="db9c5-236">Les valeurs de propriété sont converties en chaînes à l’aide de la méthode **ToString ()** de l’objet. elles sont donc représentées par le nom de la valeur de la propriété.</span><span class="sxs-lookup"><span data-stu-id="db9c5-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="db9c5-237">`Export-Csv` n’exporte pas les méthodes de l’objet.</span><span class="sxs-lookup"><span data-stu-id="db9c5-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="db9c5-238">`Import-Csv` prend également en charge le format de journal W3C étendu.</span><span class="sxs-lookup"><span data-stu-id="db9c5-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="db9c5-239">Les lignes commençant par `#` sont traitées comme des commentaires et ignorées, sauf si le commentaire commence par `#Fields:` et contient une liste délimitée de noms de colonnes.</span><span class="sxs-lookup"><span data-stu-id="db9c5-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="db9c5-240">Dans ce cas, l’applet de commande utilise ces noms de colonnes.</span><span class="sxs-lookup"><span data-stu-id="db9c5-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="db9c5-241">Il s’agit du format standard pour Windows IIS et d’autres journaux de serveur Web.</span><span class="sxs-lookup"><span data-stu-id="db9c5-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="db9c5-242">Pour plus d’informations, consultez [format de fichier journal étendu](https://www.w3.org/TR/WD-logfile.html).</span><span class="sxs-lookup"><span data-stu-id="db9c5-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="db9c5-243">LIENS CONNEXES</span><span class="sxs-lookup"><span data-stu-id="db9c5-243">RELATED LINKS</span></span>

[<span data-ttu-id="db9c5-244">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="db9c5-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="db9c5-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="db9c5-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="db9c5-246">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="db9c5-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="db9c5-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="db9c5-247">Get-Culture</span></span>](Get-Culture.md)
